--- a/www/css/index.css
+++ b/www/css/index.css
@@ -44,17 +44,11 @@ body {
     -webkit-animation:fade 3000ms infinite;
 }
 
-/* layout */
-#cabecera {
-    background-color: #F6D8CE;
-    width: 100%;
-    height: 30%;
-}
-
 /* pages */
 #registro {
     width: 100%;
     height: 100%;
+    background-color: #00FF80;
 }
 
 #registro .cabecera .logo {
@@ -69,6 +63,17 @@ body {
     float: left;
     width: 70%;
     height: 100%;
+}
+
+#cabecera {
+    background-color: #F6D8CE;
+    width: 100%;
+    height: 30%;
+}
+
+#mensaje {
+    width: 100%;
+    background-color: #A9A9F5;
 }
 
 /* hidden pages */
