--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,3 +1,9 @@
+html,body{
+  width: 100%;
+  height: 100%;
+  overflow: hidden
+}
+
 * {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
     padding:0; 
@@ -12,8 +18,6 @@ body {
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     text-transform:uppercase;
-    width:100%; 
-    height:100vh;
     padding:0; 
     margin:0;
 }
@@ -46,22 +50,24 @@ body {
     display: inline-block;
     background-color: #FE642E;
     width: 100%;
+    height: 22%;
 }
 
 #registro .contenido { 
     width: 100%;
-    height: 100%;
+    height: 73%;
     background-color: #FE9A2E;
     padding-top: 3%;
-    font-size: 15px;
+    font-size: 1.7em;
 }
 
 #registro .mensaje { 
     width: 100%;
+    height: 5%;
     text-align: center;
     color: #fff;
-    font-size: 15px;
-    margin-bottom: 0.5%;
+    font-size: 120%;
+    margin-top: 1.5%;
 }
 
 #registro .cabecera .logo {
@@ -98,7 +104,12 @@ body {
 
 /* generic styles */
 .inputSubmit {
-    width: 20em;  
+    width: 22em;  
+    height: 2em;
+}
+
+.inputText {
+    width: 22em;  
     height: 2em;
 }
 
