--- a/www/css/index.css
+++ b/www/css/index.css
@@ -41,7 +41,8 @@ body {
 
 /* registro */
 #registro {  
-    background-color: #000;  
+    /*background-color: #000;  */
+    background-color: #FE9A2E;
     width: 100%;
     height: 100%;
 }
@@ -50,20 +51,18 @@ body {
     display: inline-block;
     background-color: #FE642E;
     width: 100%;
-    height: 22%;
 }
 
 #registro .contenido { 
     width: 100%;
-    height: 73%;
-    background-color: #FE9A2E;
+    
     padding-top: 3%;
     font-size: 1.7em;
 }
 
 #registro .mensaje { 
     width: 100%;
-    height: 5%;
+    background-color: #000;
     text-align: center;
     color: #fff;
     font-size: 120%;
@@ -84,6 +83,7 @@ body {
 }
 
 #registro .contenido table { 
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -104,12 +104,12 @@ body {
 
 /* generic styles */
 .inputSubmit {
-    width: 22em;  
+    width: 100%;  
     height: 2em;
 }
 
 .inputText {
-    width: 22em;  
+    width: 100%;  
     height: 2em;
 }
 
