--- a/www/css/index.css
+++ b/www/css/index.css
@@ -40,12 +40,12 @@ body {
 }
 
 /* registro */
-#registro {  
+#registro, #alertas {  
     width: 100%;
     height: 100%;
 }
 
-#registro .cabecera {
+#registro .cabecera, #alertas .cabecera {
     display: inline-block;
     width: 100%;  
 }
@@ -54,6 +54,37 @@ body {
     width: 100%;
     padding-top: 3%;
     font-size: 1.7em;
+}
+
+#alertas .contenido { 
+    background-color: #f0be01;
+    width: 100%;
+    margin-top: 52%;
+    padding-top: 1.4%;
+    padding-bottom: 1.4%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#alertas .contenido .alerta1, #alertas .contenido .alerta2, #alertas .contenido .alerta3, #alertas .contenido .alerta4{
+    display: inline-block;
+    float: left;
+    width: 22%;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 1.2%;
+    margin-left: 0.5%;
+}
+
+#alertas .contenido .otrasAlertas {
+    display: inline-block;
+    width: 60%;
+    background-color: #fff;
+    border-radius: 5px;
+    text-align: center;
+    margin-left: 20%;
+    padding: 1.2%;
 }
 
 #registro .mensaje { 
@@ -76,6 +107,18 @@ body {
     float: left;
     width: 60%;
     text-align: center;
+}
+
+#alertas .cabecera .texto {
+    width: 85%;
+    background-color: #f0be01;
+    border-radius: 5px;
+    text-align: center;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+
 }
 
 #registro .contenido table { 
@@ -110,12 +153,43 @@ body {
     height: 23%;
 }
 
+.bg2 {
+    z-index:-1;
+    position: absolute;
+    width: 100%;
+    height: 52%;
+}
+
 .h10 {
     height: 10px;
 }
 
-/* hidden pages */
-#alertas {
+.h40 {
+    height: 40px;
+}
+
+.fs120 {
+    font-size: 120%;
+}
+
+.fs130 {
+    font-size: 130%;
+}
+
+.fs90 {
+    font-size: 90%;   
+}
+
+.fs100 {
+    font-size: 100%;
+}
+
+.fs80 {
+    font-size: 80%;
+}
+/* hidden pages 
+#alertas */
+#registro {
     display: none;
 }
 
