--- a/www/css/index.css
+++ b/www/css/index.css
@@ -45,6 +45,18 @@ body {
     height: auto;
 }
 
+#alertas .alertas_seguridad {
+    width: 100%;
+    height: auto;
+    margin-top: 1.5%;
+    padding-left: 5%;
+}
+
+#alertas .alertas_seguridad img {
+    width: 90%;
+    border-radius: 20px;
+}
+
 /* registro */
 #registro, #alertas {  
     width:100%;
