--- a/www/css/index.css
+++ b/www/css/index.css
@@ -48,7 +48,7 @@ body {
 #alertas .alertas_seguridad, #alertas .alertas_inmediatas {
     width: 100%;
     height: auto;
-    margin-top: 1.5%;
+    margin-top: 4.5%;
     padding-left: 5%;
 }
 
@@ -62,6 +62,43 @@ body {
     width: 29%;
     margin-left: 1%;
 }
+
+#alertas .contenido { 
+    width: 100%;
+    margin-top: 52%;
+    padding-top: 1.4%;
+    padding-bottom: 1.4%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 5%;
+}
+
+#alertas .contenido .linea1 {
+    float: left;
+    width: 21.5%;
+    margin-left: 1%;
+}
+
+#alertas .contenido .linea2 {
+    width: 90%;
+    margin-top: 3%;
+}
+
+#alertas .bottom {
+    position: fixed;   
+    width: 100%;
+    text-align: center;
+    margin-bottom: 0px;
+    opacity: 0.9;
+    bottom:0;
+    padding-left: 5%;
+}
+ 
+#alertas .bottom img {
+    float: left;
+    width: 17%;
+    margin-left: 1%;
+}   
 
 /* registro */
 #registro, #alertas {  
@@ -79,15 +116,7 @@ body {
     font-size: 1.7em;
 }
 
-#alertas .contenido { 
-    background-color: #f0be01;
-    width: 100%;
-    margin-top: 52%;
-    padding-top: 1.4%;
-    padding-bottom: 1.4%;
-    margin-left: auto;
-    margin-right: auto;
-}
+
 
 #alertas .contenido .alerta1, #alertas .contenido .alerta2, #alertas .contenido .alerta3, #alertas .contenido .alerta4{
     display: inline-block;
