--- a/www/css/index.css
+++ b/www/css/index.css
@@ -97,14 +97,16 @@ body {
     bottom:0;
     padding-left: 5%;
 }
- 
 .bottom img {
     float: left;
     width: 17%;
     margin-left: 1%;
 }
 
-
+/* facebook */
+.fb_iframe_widget, .fb_iframe_widget span, .fb_iframe_widget span iframe[style] {
+width: 100% !important;
+}
 
 #alertas .contenido { 
     width: 100%;
